feat: add proxy check on the project and add profile page on dashboard

--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "@better-fetch/fetch": "^1.1.18",
     "better-auth": "^1.4.4",
     "clsx": "^2.1.1",
-    "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.7",
     "lucide-react": "^0.555.0",
     "motion": "^12.23.24",
